--- a/graylog_infra/roles/graylog/templates/graylogServer.conf.j2
+++ b/graylog_infra/roles/graylog/templates/graylogServer.conf.j2
@@ -86,7 +86,7 @@ rest_listen_uri = {{ rest_listen_uri }}
 # You will need to define this, if your Graylog server is running behind a HTTP proxy that is rewriting
 # the scheme, host name or URI.
 # This must not contain a wildcard address (0.0.0.0).
-rest_transport_uri = {{ rest_transport_uri }}
+#rest_transport_uri = {{ rest_transport_uri }}
 
 # Enable CORS headers for REST API. This is necessary for JS-clients accessing the server directly.
 # If these are disabled, modern browsers will not be able to retrieve resources from the server.
